--- a/Ejercicio 2/BackEnd/servidor/pom.xml
+++ b/Ejercicio 2/BackEnd/servidor/pom.xml
@@ -16,6 +16,8 @@
 	<description>proyecto evaluacion backend</description>
 	<properties>
 		<java.version>11</java.version>
+		<!-- ENDPOINT DEL SERVICIO SOAP -->
+		<endpointwsdl>http://c24d-143-208-56-89.ngrok.io/ValidarNitService/ValidarNitService?WSDL</endpointwsdl>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -46,6 +48,51 @@
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
 			<version>20201115</version>
+		</dependency>
+		<!-- Dependencias para SOAP-->		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web-services</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>wsdl4j</groupId>
+			<artifactId>wsdl4j</artifactId>
+		</dependency>
+		<!-- DEPENDENCIA JAVAX-->	
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-core</artifactId>
+			<version>2.3.0.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+			<version>2.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.ws</groupId>
+			<artifactId>jaxws-rt</artifactId>
+			<version>2.3.0</version>
+			<type>pom</type>
 		</dependency>		
 	</dependencies>
 
@@ -54,6 +101,31 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<!-- PLUGIN WSIMPORT-->		
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>jaxws-maven-plugin</artifactId>
+				<version>2.6</version>
+				<executions>
+					<execution>
+						<id>wsdltoJava</id>
+						<goals>
+							<goal>wsimport</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<encoding></encoding>
+					<verbose>true</verbose>
+					<sourceDestDir>src/main/java/com/evaluacion/servidor</sourceDestDir>
+					<wsdlUrls>
+						<wsdlUrl>${endpointwsdl}</wsdlUrl>
+					</wsdlUrls>
+					<vmArgs>
+						<vmArg>-Djavax.xml.accessExternalSchema=all</vmArg>
+					</vmArgs>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
